# ray

./: BUILD.bazel  WORKSPACE
bazel/: go_deps.bzl
go/: BUILD.bazel  build.sh  go.mod  go.sum
go/cmd/default_worker/: BUILD.bazel
go/example/ray/: main.go
go/internal/api/: BUILD.bazel  ray.go  task_caller.go
go/internal/ccore/: BUILD.bazel  ccore.i  ccore_worker.cc  ccore_worker.h
go/internal/logger/: BUILD.bazel  logger.go
go/internal/runtime/: BUILD.bazel  local_ray_runtime.go  native_ray_runtime.go  runtime.go
go/internal/runtime/common/: BUILD.bazel
go/internal/runtime/config/: BUILD.bazel  ray_config.go
go/internal/runtime/object/: BUILD.bazel  local_object_store.go  object_ref.go  object_store.go
go/internal/runtime/runner/: BUILD.bazel  runner.go
go/internal/runtime/serializer/: BUILD.bazel  serializer.go
go/internal/runtime/task/: BUILD.bazel  function_manager.go  local_task_exector.go  local_task_submitter.go  task_executor.go  task_submitter.go
go/internal/runtime/worker/: BUILD.bazel  cgo_core_worker.cc  cgo_core_worker.h  worker.go
go/test/cmd/: BUILD.bazel  default_worker_test.go
go/test/internal/api/: BUILD.bazel  ray_test.go
go/test/internal/runtime/: BUILD.bazel  object_store_test.go  runtime_test.go
python/requirements/ml/: core-requirements.txt  dl-cpu-requirements.txt  dl-gpu-requirements.txt  requirements_dl.txt  requirements_rllib.txt  requirements_tune.txt  rllib-requirements.txt
python/requirements/rllib/: requirements_rllib.txt
python/requirements/tune/: requirements_tune.txt
src/ray/protobuf/: BUILD  common.proto  runtime_env_common.proto
